conditions.Conditions.scala.error
Erreur de compilation :
Conditions:2: error: ')' expected but '(' found.
   (estFaceMur()) {
              ^Conditions:2: error: '=' expected but ')' found.
   (estFaceMur()) {
                ^Conditions:8: error: illegal start of simple expression
	}
        ^