conditions.Conditions.scala.code
def estFaceMur():
   (estFaceMur()) {
     recule(1);
   } else {
     avance(1);
   }